--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <ul class="header--nav-links ff--primary nav navbar-right">
                             <li class="active"><a href="index.html">Home</a></li>
                             <li><a href="about-me.html">About Me</a></li>
-                            <li><a href="blog.html">Teaching</a></li>
+                            <li><a href="teaching.html">Teaching</a></li>
                             <!--li><a href="#services" data-trigger="scroll">Teaching</a></li-->
                             <li><a href="portfolio.html">Portfolio</a></li>
                             <li><a href="blog.html">Blog</a></li>
